--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
             id="todo"
             placeholder="My tasks for today"
           />
-          <div class="error"></div>
-          <button id="save">Save</button>
+          <div class="error">Please fill task</div>
         </form>
-        <div class="todos"></div>
+        <div class="todos">
+          <div class="todo">
+            <p>Lorem ipsum dolor sit</p>
+            <input type="checkbox" class="done" />
+          </div>
+        </div>
       </div>
     </section>
   </body>
